--- a/configure.ac
+++ b/configure.ac
@@ -23,6 +23,7 @@ AC_CANONICAL_TARGET
 AC_CONFIG_SRCDIR(bayesian-binning/bayesian-binning.c)
 AM_INIT_AUTOMAKE([gnu dist-bzip2])
 AC_PROG_CC
+AC_PROG_CXX
 AC_LIBTOOL_DLOPEN
 AC_PROG_LIBTOOL
 AC_ISC_POSIX
@@ -177,8 +178,8 @@ AM_CONDITIONAL([COND_PERL], [test "$PERL" != no])
 
 AM_PATH_PYTHON(2.3)
 AX_PKG_SWIG(1.3.17, [], [ AC_MSG_ERROR([SWIG is required to build..]) ])
-AX_SWIG_MULTI_MODULE_SUPPORT
-AX_SWIG_ENABLE_CXX
+#AX_SWIG_MULTI_MODULE_SUPPORT
+#AX_SWIG_ENABLE_CXX
 AX_SWIG_PYTHON
 
 # ------------------] AC_OUTPUT [
