--- a/Makefile.am
+++ b/Makefile.am
@@ -2,12 +2,4 @@
 
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = libexception bayesian-binning
-
-## relocate distdir
-#distdir = ../$(PACKAGE)-$(VERSION)
-
-## include debian files
-EXTRA_DIST = debian/compat debian/control debian/copyright debian/postinst debian/rules \
-	     debian/updatedd.files debian/updatedd-doc.files debian/libupdatedd0.files \
-	     debian/libupdatedd0-dev.files debian/changelog
+SUBDIRS = libexception libprombs bayesian-binning
