--- a/include/bayes_datatypes.h.in
+++ b/include/bayes_datatypes.h.in
@@ -41,6 +41,7 @@ typedef struct options {
         int prombsTest;
         int gmp;
         int bprob;
+        int entropy;
         int which;
 } Options;
 
