--- a/configure.ac
+++ b/configure.ac
@@ -231,14 +231,10 @@ dnl AC_PATH_PROG(PERL, perl, "no")
 dnl AM_CONDITIONAL([COND_PERL], [test "$PERL" != no])
 
 dnl ,---------------------------- 
-dnl | PYTHON / SWIG
+dnl | PYTHON
 dnl `----------------------------
 
-AM_PATH_PYTHON(2.3)
-AX_PKG_SWIG(1.3.17, [], [ AC_MSG_ERROR([SWIG is required to build..]) ])
-#AX_SWIG_MULTI_MODULE_SUPPORT
-#AX_SWIG_ENABLE_CXX
-AX_SWIG_PYTHON
+AM_PATH_PYTHON(2.5)
 
 dnl ,---------------------------- 
 dnl | AC_OUTPUT
