--- a/Makefile.am
+++ b/Makefile.am
@@ -3,3 +3,5 @@
 ACLOCAL_AMFLAGS = -I m4
 
 SUBDIRS = libexception libprombs bayesian_binning include
+
+dist_bin_SCRIPTS  = bayesian-binning adaptive-sampling
