--- a/Makefile.am
+++ b/Makefile.am
@@ -10,6 +10,19 @@ EXTRA_DIST        = adaptive-sampling.in bayesian-binning.in
 
 man1_MANS         = adaptive-sampling.1 bayesian-binning.1
 
+EXTRA_DIST        = debian/control                             \
+                   debian/copyright                            \
+                   debian/compat                               \
+                   debian/changelog                            \
+                   debian/libbayesian-binning0-dev.install     \
+                   debian/rules                                \
+                   debian/bayesian-binning.install             \
+                   debian/libbayesian-binning0.install         \
+                   debian/docs                                 \
+                   debian/adaptive-sampling.install            \
+                   debian/dirs
+
+
 DB2MAN            = /usr/share/sgml/docbook/stylesheet/xsl/nwalsh/manpages/docbook.xsl
 XP                = xsltproc -''-nonet -''-param man.charmap.use.subset "0"
 
