--- a/configure.ac
+++ b/configure.ac
@@ -24,10 +24,12 @@ AC_CANONICAL_HOST
 AC_CANONICAL_TARGET
 AC_CONFIG_SRCDIR(bayesian_binning/bayesian-binning.c)
 AM_INIT_AUTOMAKE([gnu dist-bzip2])
+AC_LIBTOOL_WIN32_DLL
 AC_PROG_LIBTOOL
 LT_INIT
 AC_PROG_CC
 AC_PROG_CXX
+AC_C_CONST
 AC_ISC_POSIX
 AC_PROG_INSTALL
 AM_PROG_CC_C_O
