--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -4,4 +4,4 @@
 include_HEADERS = 
 
 ## include headers in distribution
-EXTRA_DIST = bayes_datatypes.h bayes_exception.h bayes_logarithmetic.h bayes_prombs.h gnugetopt.h
+EXTRA_DIST = bayes_linalg.h bayes_datatypes.h bayes_exception.h bayes_logarithmetic.h bayes_prombs.h gnugetopt.h
