--- a/AdaptiveSampling/NAMESPACE
+++ b/AdaptiveSampling/NAMESPACE
@@ -1,9 +1,9 @@
 useDynLib(AdaptiveSampling)
-export(count_statistic)
-export(default_alpha)
-export(default_beta)
-export(default_gamma)
-export(default_options)
-export(adaptive_sampling)
-export(plot_result)
-export(sampling_demo)
+export(count.statistic)
+export(default.alpha)
+export(default.beta)
+export(default.gamma)
+export(make.options)
+export(adaptive.sampling)
+export(plot.sampling)
+export(sampling.demo)
