R interface: plot like in matlab

--- a/AdaptiveSampling/NAMESPACE
+++ b/AdaptiveSampling/NAMESPACE
@@ -5,5 +5,6 @@ export(default.beta)
 export(default.gamma)
 export(make.options)
 export(adaptive.sampling)
+export(plot.binning.marginal)
 export(plot.sampling)
 export(sampling.demo)
